# SlitherIO_NEAT

./: Digraph.gv  README.md  config-feedforward.ini  decompiled_game.js  decompiled_source_rnd2.js  game.py  main.py  neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-10  neat-checkpoint-11  neat-checkpoint-12  neat-checkpoint-13  neat-checkpoint-14  neat-checkpoint-15  neat-checkpoint-16  neat-checkpoint-17  neat-checkpoint-18  neat-checkpoint-19  neat-checkpoint-2  neat-checkpoint-20  neat-checkpoint-21  neat-checkpoint-22  neat-checkpoint-23  neat-checkpoint-24  neat-checkpoint-25  neat-checkpoint-27  neat-checkpoint-29  neat-checkpoint-3  neat-checkpoint-31  neat-checkpoint-33  neat-checkpoint-35  neat-checkpoint-37  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-40  neat-checkpoint-5  neat-checkpoint-6  neat-checkpoint-7  neat-checkpoint-8  (+13 more)
basicneat/: basic_neat.py  config-feedforward.ini
neattest/: Digraph.gv  neat-checkpoint-14  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44  neat-checkpoint-49  neat-checkpoint-54  neat-checkpoint-59  neat-checkpoint-9
