[tool.poetry]
name = "SlitherIO_NEAT"
version = "0.1.0"
description = ""
authors = ["Shiv Trivedi <shiv.v.trivedi@gmail.com>", "Yaseen S. <yaseen.nvt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
neat-python = "^0.92"
matplotlib = "^3.4.2"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"